@@ -492,7 +492,7 @@ int color_to_int(const char *colorname, bool *bright);
 char *parse_next_regex(char *ptr);
 bool nregcomp(regex_t *preg, const char *regex, int eflags);
 void parse_syntax(char *ptr);
-void parse_colors(char *ptr);
+void parse_colors(char *ptr, bool icase);
 #endif /* ENABLE_COLOR */
 void parse_rcfile(FILE *rcstream);
 void do_rcfile(void);
